[metadata]
name = my_package
version = attr:my_package.1
author = Connor Kuziemko, Raul Lopez, Shriraj Mandulapalli
author_email = ckuziemko3349@floridapoly.edu, rlopez3163@floridapoly.edu, smandulapalli3528@floridapoly.edu
description = Data analysis of audio files using Python
long_description = file:README.md, CHANGELOG.md
keywords = one, two
license = BSD-3-Clause
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = my_package.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
